testing/stage_20/invalid/void_char.c
int main()
{
	void char a=2;
	return a;
}